update: css linked to html

--- a/Calculator.html
+++ b/Calculator.html
@@ -1,8 +1,9 @@
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="Calculator.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
 </head>
 <body>
     <div id = "calculator">
